[gd_scene load_steps=2 format=2]

[ext_resource path="res://Screenshake.gd" type="Script" id=1]

[node name="Screenshake" type="Node"]
script = ExtResource( 1 )

[node name="ShakeTween" type="Tween" parent="."]

[node name="Duration" type="Timer" parent="."]
wait_time = 0.75

[node name="Frequency" type="Timer" parent="."]
wait_time = 0.25
[connection signal="timeout" from="Duration" to="." method="_on_Duration_timeout"]
[connection signal="timeout" from="Frequency" to="." method="_on_Frequency_timeout"]
